Customize Radix UI theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,10 @@
 @tailwind base;
+@import "@radix-ui/themes/styles.css";
+
 @tailwind components;
 @tailwind utilities;
 
+
+.radix-themes {
+    --default-font-family: var(--font-inter);
+}
